--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dotoracle/default-token-list",
-  "version": "0.0.1",
+  "name": "dotoracle-default-token-list",
+  "version": "0.0.2",
   "description": "◦ The DotOracle Pegged Swap default token list",
   "main": "build/dotoracle-default.tokenlist.json",
   "scripts": {
