--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "dotoracle-default-token-list",
+  "name": "@dotoracle/default-token-list",
   "version": "0.0.2",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "◦ The DotOracle Pegged Swap default token list",
   "main": "build/dotoracle-default.tokenlist.json",
   "scripts": {
@@ -33,7 +36,7 @@
     "@ethersproject/solidity": "^5.3.0",
     "@octokit/rest": "^18.6.2",
     "@uniswap/token-lists": "^1.0.0-beta.19",
-    "dotoracle-sdk": "0.0.1",
+    "@dotoracle/sdk": "0.0.10",
     "ajv": "^6.12.3",
     "chai": "^4.2.0",
     "lodash": "^4.17.21",
